// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserGuide  onClickHandler update state to true - content is empty - popup is shown 1`] = `
<div>
  <i
    className="icon-book right"
    onClick={[Function]}
    title={undefined}
  />
  <div
    className="popup-container show"
  >
    <div
      className="popup-block-body"
    />
    <div
      className="flat-popup"
      style={
        Object {
          "height": "480px",
          "width": "640px",
        }
      }
    >
      <div
        className="popup-title"
      >
        <div
          className="txt-title"
        />
        <a
          className="popup-close"
          href="javascript:;"
          onClick={[Function]}
        >
          <i
            className="icon-close"
          />
        </a>
      </div>
      <div
        className="popup-content"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<div></div>",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`UserGuide  onClickHandler update state to true - content is not empty - popup is shown 1`] = `
<div>
  <i
    className="icon-book right"
    onClick={[Function]}
    title={undefined}
  />
  <div
    className="popup-container hide"
  >
    <div
      className="popup-block-body"
    />
    <div
      className="flat-popup"
      style={
        Object {
          "height": "480px",
          "width": "640px",
        }
      }
    >
      <div
        className="popup-title"
      >
        <div
          className="txt-title"
        />
        <a
          className="popup-close"
          href="javascript:;"
          onClick={[Function]}
        >
          <i
            className="icon-close"
          />
        </a>
      </div>
      <div
        className="popup-content"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`UserGuide  render popup component is hidden 1`] = `
<div>
  <i
    className="icon-book right"
    onClick={[Function]}
    title={undefined}
  />
  <div
    className="popup-container hide"
  >
    <div
      className="popup-block-body"
    />
    <div
      className="flat-popup"
      style={
        Object {
          "height": "480px",
          "width": "640px",
        }
      }
    >
      <div
        className="popup-title"
      >
        <div
          className="txt-title"
        />
        <a
          className="popup-close"
          href="javascript:;"
          onClick={[Function]}
        >
          <i
            className="icon-close"
          />
        </a>
      </div>
      <div
        className="popup-content"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<div></div>",
          }
        }
      />
    </div>
  </div>
</div>
`;
